--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 224 71.4% 2.1%;;
     --ultramute: #FFFFFF;
     --foreground: 0 0% 98%;
     --card: 240 10% 3.9%;
