--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,19 +26,19 @@
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
     --radius: 0.5rem;
-    --n1: "#FFFFFF";
-    --n2: "#CAC6DD";
-    --n3: "#ADA8C3";
-    --n4: "#757185";
-    --n5: "#3F3A52";
-    --n6: "#252134";
-    --n7: "#15131D";
-    --n8: "#0E0C15";
-    --n9: "#474060";
-    --n10: "#43435C";
-    --n11: "#1B1B2E";
-    --n12: "#2E2A41";
-    --n13: "#6C7275";
+    --n1: #FFFFFF;
+    --n2: #CAC6DD;
+    --n3: #ADA8C3;
+    --n4: #757185;
+    --n5: #3F3A52;
+    --n6: #252134;
+    --n7: #15131D;
+    --n8: #0E0C15;
+    --n9: #474060;
+    --n10: #43435C;
+    --n11: #1B1B2E;
+    --n12: #2E2A41;
+    --n13: #6C7275;
   }
 
   .dark {
@@ -62,19 +62,19 @@
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
-    --n1: "#FFFFFF";
-    --n2: "#CAC6DD";
-    --n3: "#ADA8C3";
-    --n4: "#757185";
-    --n5: "#3F3A52";
-    --n6: "#252134";
-    --n7: "#15131D";
-    --n8: "#0E0C15";
-    --n9: "#474060";
-    --n10: "#43435C";
-    --n11: "#1B1B2E";
-    --n12: "#2E2A41";
-    --n13: "#6C7275";
+    --n1: #FFFFFF;
+    --n2: #CAC6DD;
+    --n3: #ADA8C3;
+    --n4: #757185;
+    --n5: #3F3A52;
+    --n6: #252134;
+    --n7: #15131D;
+    --n8: #0E0C15;
+    --n9: #474060;
+    --n10: #43435C;
+    --n11: #1B1B2E;
+    --n12: #2E2A41;
+    --n13: #6C7275;
   }
 }
 
