fix: adding linkhelper adnd minor fix

--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -8,6 +8,6 @@
 <body>
   <h2 style="">Hello MegaMesser </h2>
   <p>{{content}} </p>
-  <a style="text-decoration: none; background: black; color:white; border-radius: 5px; padding: 9px 10px; margin: 10px 0px;" target="_blank" href={{link}}>{{linkHelper}}</a>
+  <a style="text-decoration: none; background: black; color:white; border-radius: 5px; padding: 9px 10px; margin: 10px 0px;" href={{link}}>{{linkHelper}}</a>
 </body>
 </html>
