--- a/components/sub-btn/sub-btn.module.css
+++ b/components/sub-btn/sub-btn.module.css
@@ -1,13 +1,13 @@
 .btn {
     font-size: 1.2rem;
-    padding: 1rem 2.5rem;
+    padding:10px 2.5rem;
     border: none;
     outline: none;
     border-radius: 0.4rem;
     cursor: pointer;
     text-transform: uppercase;
-    background-color: rgb(14, 14, 26);
-    color: rgb(234, 234, 234);
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-weight: 700;
     transition: 0.6s;
     box-shadow: 0px 0px 60px #9b46e5;
