refactor the prisma schema and modified fields

--- a/views/email.handlebars
+++ b/views/email.handlebars
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Welcome Email</title>
-</head>
-<body>
-  <h2 style="">Hello MegaMesser </h2>
-  <p>{{content}} </p>
-  <a style="text-decoration: none; background: black; color:white; border-radius: 5px; padding: 9px 10px; margin: 10px 0px;" href={{link}}>{{linkHelper}}</a>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>Welcome Email</title>
+  </head>
+  <body>
+    <h2 style="">Hello MegaMesser </h2>
+    <p>{{content}} </p>
+    <a
+      style="text-decoration: none; background: black; color:white; border-radius: 5px; padding: 9px 10px; margin: 10px 0px;"
+      href={{link}}
+    >{{linkHelper}}</a>
+  </body>
 </html>
